--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,23 @@
-Django~=2.0.6
+appdirs==1.4.3
+attrs==18.2.0
+cached-property==1.5.1
+certifi==2018.11.29
+chardet==3.0.4
+defusedxml==0.5.0
+deprecation==2.0.6
+Django==2.0.9
+django-autocomplete-light==3.3.2
+idna==2.8
+isodate==0.6.0
+lxml==4.3.1
+packaging==19.0
+pkg-resources==0.0.0
+pycep-correios==3.1.0
+pyparsing==2.3.1
+python-dateutil==2.7.5
+pytz==2018.6
+requests==2.21.0
+requests-toolbelt==0.9.1
+six==1.12.0
+urllib3==1.24.1
+zeep==3.2.0
